policy-controller-examples/pod-without-asm-sidecar-injection.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# test AsmSidecarInjection in asm-policy-v0.0.1-asm-sidecar-injection
apiVersion: v1
kind: Pod
metadata:
  namespace: constraint-test
  annotations:
    sidecar.istio.io/inject: "false"  ## change back into "true" for passing the constraint.
  name: sleep
spec:
  containers:
  - image: curlimages/curl
    name: sleep
